Change log
==========

1.2 (unreleased)
----------------
- Miscellaneous: Removed the version pinning on the Sphinx dependency 
  since our other dependency (repoze.sphinx.autointerface) is now 
  compatible with Sphinx 1.0.

- Bug: If pkg_resources.find_distributions cannot find valid
  Egg distributions we still force the tag folder itself into the 
  pkg_resources.working_set as a fallback.


1.1 (2010-07-25)
----------------
- Feature: The user can now provide a Sphinx configuration folder 
  path that will be used to generate additional content for the 
  documentation root folder.

- Factoring: Moved the DocsBuilder class into its own module.

- Factoring: Save run state on the documentation builder class 
  instead of handing it around

- Cosmetic: Use a flat hierarchy when creating the HTML output links
  instead of a folder per package. Only a single index page needs to 
  be created that way.


1.0 (2010-07-23)
----------------
- Initial release