@@ -12,7 +12,7 @@ parts =
 recipe = dataflake.docbuilder
 eggs =  
   pkginfo
-source =
+sources =
     http://svn.dataflake.org/svn/dataflake.docbuilder
 
 [docs]
